Fix dropdown spacing on area management

--- a/src/pages/sites/sites.module.css
+++ b/src/pages/sites/sites.module.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 .site-container {
   /* display: flex;
   flex-direction: row;
@@ -52,9 +48,11 @@
   justify-content: space-between;
 }
 
-.school-year-input {
-  margin: 0 20px;
+.school-year-dropdown {
+  margin-left: 15px;
+  margin-right: 15px;
 }
+
 .search-school {
   display: flex;
   align-items: center;
